commented out empty about tab in navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links
 main:
 
-  - title: "About"
-    url: 
+  # - title: "About"
+  #   url: 
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
