--- a/_config.yml
+++ b/_config.yml
@@ -156,6 +156,8 @@ footer:
 include:
   - .htaccess
   - _pages
+  - assets
+  - /docs
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -164,9 +166,9 @@ exclude:
   - .bundle
   - .jekyll-assets-cache
   - .sass-cache
-  - assets/js/plugins
-  - assets/js/_main.js
-  - assets/js/vendor
+  # - assets/js/plugins
+  # - assets/js/_main.js
+  # - assets/js/vendor
   - Capfile
   - CHANGELOG
   - config
@@ -181,7 +183,7 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
+  # - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
 keep_files:
   - .git
