--- a/_config.yml
+++ b/_config.yml
@@ -286,5 +286,7 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: splash
+      layout: single
+    header:
+      image: /assets/images/yosemiteBW.jpg
     
