--- a/_config.yml
+++ b/_config.yml
@@ -219,10 +219,10 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
-paginate: 0 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+# permalink: /:categories/:title/
+# paginate: 0 # amount of posts to show
+# paginate_path: /page:num/
+# timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
@@ -286,7 +286,6 @@ defaults:
       path: ""
       type: pages
     values:
-      layout: single
-    header:
-      image: /assets/images/yosemiteBW.jpg
+      layout: splash
+
     
